# FluxiDominus_dev

./: CHAT_GPT_INQUIRIES.py  CHAT_GPT_INQUIRIES_2.py  IRCollector.py  IRTester.py  LICENSE  SCRIPT_GENERATOR_QUERY_CHATGPT.py  SCRIPT_GENERATOR_QUERY_CHATGPT.txt  Streaming_request_templates.txt  automation_script.fdp  automation_script.py  demo_slug_tracker.py  demo_slug_tracker_scratch.py  main.py  main_optimizing.py  main_optimizing_FAKE.py  main_plutter.py  procedure.fdp  requirements.txt  scratch.py  scratch2.py  scratch_2.py  scratch_3.py  scratch_4.py  scratch_FLUIDTRACKING.py  streaming_main.py  streaming_main_BACKUP.py  summit_scratch.py
aux_code_BACKUP/deviceInterfaces/rseriesopc-v2.1.2/: changes.txt  pyproject.toml  setup.py
aux_code_BACKUP/deviceInterfaces/rseriesopc-v2.1.2/docs/html/: .buildinfo  genindex.html  index.html  objects.inv  rseriesopc.html  rseriesopc.model.devices.html  rseriesopc.model.experiment.html  rseriesopc.model.html  rseriesopc.model.identification.html  rseriesopc.model.monitoring.html  rseriesopc.model.notification.html  search.html  searchindex.js
aux_code_BACKUP/deviceInterfaces/rseriesopc-v2.1.2/examples/: addingReactionExample.py  example-case.py  getAndLoadExperimentsExample.py  importCsvExample.py  makingReactionsExample.py  manualControlDemo.py  manualControlExample.py  modifyingReactionExample.py  reactionManagerDemo.py  reactionParametersExample.py  readingDataExample.py
aux_code_BACKUP/deviceInterfaces/rseriesopc-v2.1.2/files/: test.csv
aux_code_BACKUP/deviceInterfaces/rseriesopc-v2.1.2/files/example4/: example4.rs  (+2 more)
(+430 files in other folders)
