[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'rseriesopc'
dynamic = ['version', 'license']
authors = [
    {name = 'Edwin Barragan'},
    {email = 'ebarragan@emtech.com.ar'}
]
description = "RSeries client for OPC-UA communication"
requires-python = '>=3.7'
dependencies =[
    'opcua'
]

[tool.setuptools.packages.find]
where = ['src']
include = ['rseriesopc']
namespaces = false

[tool.setuptools.dynamic]
version = {attr = 'rseriesopc.__version__'}